--- a/src/style/template.scss
+++ b/src/style/template.scss
@@ -11,4 +11,4 @@ $colorLine: #E7E7E7;
 
 //background
 $backgroundSubscribe: #f4eefd;
-$backgroundImageBook: #d7e4fd;
+$backgroundImageBook: #d7e4fd
