--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -13,7 +13,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            margin-top: 35px;
+            margin: 35px 0;
         }
 
         .content_developer {
