--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,34 +9,39 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        gap: 20px;
         padding: 24px 0;
+        border-bottom: 1px solid $colorLine;
     }
 
     .header_elements_logo {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        max-width: 138px;
     }
 
-    .header_elements_search input {
-        width: 542px;
-        border: 1px solid $colorLine;
-        font-size: 16px;
-        padding: 14px 40px 14px 20px;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 200%;
-        color: $hintColor;
+    .header_elements_search {
         position: relative;
-    }
+        width: 542px;
 
-    .header_itemSearch_logo {
-        position: absolute;
-        top: 45px;
-        right: 0;
-        bottom: 0;
-        left: calc(100% - 510px);
-        z-index: 2;
+        .header_itemSearch {
+            width: 100%;
+            border: 1px solid $colorLine;
+            font-size: 16px;
+            padding: 14px 40px 14px 20px;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 200%;
+            color: $hintColor;
+        }
+
+        .header_itemSearch_logo {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            z-index: 2;
+        }
     }
 
     .header_elements_favoritesBasketSignIn {
